@@ -4,13 +4,13 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 
 public class MathNewCode {
-    Boolean bool = Boolean.valueOf(true);
-    Byte b = Byte.valueOf("1");
-    Character c = Character.valueOf('c');
-    Double d = Double.valueOf(1.0);
-    Float f = Float.valueOf(1.1f);
-    Long l = Long.valueOf(1);
-    Short sh = Short.valueOf("12");
+    Boolean bool = Boolean.valueOf(false);
+    Byte b = new Byte("1");
+    Character c = new Character('c');
+    Double d = new Double(1.0);
+    Float f = new Float(1.1f);
+    Long l = new Long(1);
+    Short sh = new Short("12");
     short s3 = 3;
     Short sh3 = Short.valueOf(s3);
     Integer i = Integer.valueOf(1);
